# RAG

./: README.md  alembic.ini  index.html  main.py  pyproject.toml  requirements.txt
alembic/: env.py  init_db.py
alembic/versions/: 0001_create_initial_tables.py  15371e17a66c_init.py
app/: main.py
app/api/v1/: admin.py  auth.py  chat.py  chat_history.py  documents.py  files.py  ingestion.py  rag.py  router.py  test.py  test_ingestion.py
app/core/: config.py  settings.py
app/db/: base.py  crud.py  models.py  session.py
app/db/migrations/: env.py
app/langgraph/graphs/: rag_graph.py
app/schemas/: db.py  ingestion.py  test_ingestion.py
app/services/: chunk.py  layout_parser.py
app/services/ingestion/: chunking.py  embedding.py  ingestion.txt  parser.py
app/services/ingestion/preprocess/: analyzer_upstage.py  extract_assets.py  render_html_md.py  split_pdf.py
migrations/: env.py
migrations/versions/: 6ec79bfef9b7_init.py
tests/: conftest.py  layout-parser.py  reasoning_rag.py  test_analyzer_upstage.py  test_extract_assets.py  test_parser.py  test_render_html_md.py  test_split_pdf.py
tests/test/: test_analyzer_upstage.py  test_chunking.py  test_embedding.py  test_extract_assets.py  test_ingestion_upload.py  test_parser.py  test_split_pdf.py
